devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |

  Docker container of a bookstore app with mysql database running on EC2 Instance.

Parameters:
  
  UserKeyPair:
    Description: Please select your keypair file.
    Type: AWS::EC2::KeyPair::KeyName
     
Resources:
  
  SecGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: HTTP and SSH
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80 
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  
  EC2:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId:  ami-0947d2ba12ee1ff75
      InstanceType: t2.micro
      KeyName: !Ref UserKeyPair
      SecurityGroupIds:
        - !GetAtt SecGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName}
      UserData:
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            amazon-linux-extras install docker -y
            systemctl start docker
            systemctl enable docker
            usermod -a -G docker ec2-user
            curl -L "https://github.com/docker/compose/releases/download/1.27.4/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
            chmod +x /usr/local/bin/docker-compose
            wget -P /home/ec2-user/app/folder https://raw.githubusercontent.com/E2031-Salih/cw_AWS_Dev_Ops_Workshop/master/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/bookstore-api.py
            wget -P /home/ec2-user/app/folder https://raw.githubusercontent.com/E2031-Salih/cw_AWS_Dev_Ops_Workshop/master/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/requirements.txt
            wget -P /home/ec2-user/app https://raw.githubusercontent.com/E2031-Salih/cw_AWS_Dev_Ops_Workshop/master/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/Dockerfile
            wget -P /home/ec2-user/app https://raw.githubusercontent.com/E2031-Salih/cw_AWS_Dev_Ops_Workshop/master/devops/projects/201-dockerization-bookstore-api-on-python-flask-mysql/docker-compose.yml
            cd /home/ec2-user/app
            docker-compose up -d



Outputs:

  BookstoreWebAPIURL:
    Description: Website of Bookstore Application
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt EC2.PublicDnsName
